welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: value Max is not a member of object Math
	return ( Math.Max (a,b):Int )
                      ^