welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
	if ( ( a>= 10 && a <= 20 ) && ( a>= 10 && a <= 20 ) )
	return ( Math.Max (a,b):Int )
	else( 0 )
}
